# nexton

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  PUBLISH_CHECKLIST.md  QUICK_POLISH_SUMMARY.md  README.md  alembic.ini  check_langfuse.py  docker-compose.langfuse.yml  docker-compose.lite.yml  docker-compose.monitoring.yml  docker-compose.yml  env.lite.example  pyproject.toml  pytest.ini  requirements-ai-review.txt  requirements-dev.txt  requirements-lite.txt  requirements.txt  test_message_generation.py  test_scraper.py  test_scraper_demo.py  test_scraper_quick.py
.agent/skills/context-aware-extraction/: SKILL.md
.agent/skills/database-imports/: SKILL.md
.agent/skills/dual-side-validation/: SKILL.md
.agent/skills/linkedin-content/: SKILL.md
.agent/skills/makefile-usage/: SKILL.md
.agent/skills/observability-best-practices/: SKILL.md
.agent/skills/scraping-best-practices/: SKILL.md
.agent/skills/sql-query-optimization/: SKILL.md
.agent/skills/sse-streaming/: SKILL.md
.agent/skills/timezone-safe-dates/: SKILL.md
.agent/skills/toast-notifications/: SKILL.md
.agent/skills/walkthrough-best-practices/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: main.py
app/api/: dependencies.py
app/api/v1/: __init__.py  health.py  metrics.py  opportunities.py  profile.py  responses.py  schemas.py  scraping.py  settings.py
app/cache/: __init__.py  cache_keys.py  redis_client.py
app/core/: config.py  exceptions.py  logging.py  profile.py  sse_utils.py
app/database/: base.py  dependencies.py  models.py  repositories.py
app/database/migrations/: env.py
app/database/migrations/versions/: 20260122_001_add_classification_fields.py  20260208_001_add_message_timestamp.py  20260210_1215_23cd636ddee3_add_feedback_fields.py  20260210_1222_fb0a8f6262c9_change_tech_stack_to_json.py  20260210_2039_c0220f51fa15_add_response_feedback.py
app/dspy_modules/: hard_filters.py  message_analyzer.py  metrics.py  models.py  optimizer.py  pipeline.py  profile_loader.py  response_generator.py  scorer.py  signatures.py  training_data.py
app/dspy_pipeline/: __init__.py  llm_factory.py  opportunity_analyzer.py  response_generator.py
app/llm/: __init__.py  anthropic_provider.py  base.py  dspy_adapter.py  factory.py  models.py  ollama_provider.py  openai_provider.py
app/notifications/: __init__.py  email_client.py  models.py  service.py  templates.py
app/observability/: __init__.py  evaluations.py  langfuse_setup.py  metrics.py  tracing.py
app/scraper/: __init__.py  linkedin_scraper.py  rate_limiter.py  session_manager.py
app/services/: __init__.py  linkedin_messenger.py  opportunity_service.py  scraping_service.py
app/tasks/: __init__.py  celery_app.py  messaging_tasks.py  monitoring_tasks.py  processing_tasks.py  scraping_tasks.py
config/: profile.yaml
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DSPY_GUIDE.md  IMPLEMENTATION_PLAN.md  MULTI_LLM_GUIDE.md  NOTIFICATIONS_AND_RESPONSES.md  SCRAPER.md  SCRAPER_TESTING.md  SCREENSHOTS_GUIDE.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  UI_IMPROVEMENT_PLAN.md  USER_GUIDE.md  sse-guide.md
docs/development/: README.md  SPRINT2_SUMMARY.md  SPRINT2_VALIDATION.md  SPRINT3_PLAN.md
docs/guides/: MESSAGE_GENERATION_TEST.md  OLLAMA_SETUP.md  PROFILE_CONFIGURATION.md  QUICKSTART_OLLAMA.md  README.md  SCRAPER_IMPROVEMENTS.md  SCRAPER_TESTING_README.md  SELECTOR_FIX_NOTES.md
docs/images/: README.md
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  health.ts  index.ts  opportunities.ts  profile.ts  responses.ts  scraping.ts  settings.ts
frontend/src/components/: ErrorBoundary.tsx  LoadingSpinner.tsx
frontend/src/components/dashboard/: RecentOpportunities.tsx  ScrapeButton.tsx  ScrapingProgress.tsx  StatsCards.tsx  TierChart.tsx  index.ts
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx  index.ts
frontend/src/components/opportunities/: ConversationStateBadge.tsx  FollowUpAnalysisCard.tsx  HardFiltersCard.tsx  ManualReviewAlert.tsx  OpportunityCard.tsx  OpportunityFilters.tsx  OpportunityList.tsx  ProcessingStatusBadge.tsx  ScoreBar.tsx  TierBadge.tsx  index.ts
frontend/src/components/profile/: ListEditor.tsx  TechStackEditor.tsx  index.ts
frontend/src/components/responses/: ResponseCard.tsx  ResponseList.tsx  index.ts
frontend/src/components/settings/: index.ts
frontend/src/components/ui/: badge.tsx
frontend/src/hooks/: index.ts  useHealth.ts  useOpportunities.ts  useProfile.ts  useResponses.ts  useScraping.ts  useScrapingStream.ts  useSettings.ts  useToast.ts
frontend/src/pages/: Dashboard.tsx  ManualReview.tsx  Opportunities.tsx  OpportunityDetail.tsx  Profile.tsx  Responses.tsx  Settings.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts  opportunity.ts  profile.ts  response.ts  settings.ts
infrastructure/docker/: Dockerfile  Dockerfile.playwright
infrastructure/scripts/: health_check.sh  init_db.sh
monitoring/: README.md
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail-config.yml
scripts/: ai_pr_description.py  ai_pr_reviewer.py  optimize_dspy.py  optimize_pipeline.py  run_daily_scrape.py  run_evals.py  run_lite.py  run_tests.sh  scrape_linkedin.py  smoke_test.sh  start.sh  take_screenshots.sh  test_daily_summary.py
tests/: README.md  conftest.py
tests/api/: test_feedback.py
tests/integration/: test_celery_tasks.py  test_database.py  test_metrics_api.py  test_service_layer.py
tests/unit/: test_api_health.py  test_cache.py  test_config.py  test_conversation_state.py  test_dspy_models.py  test_llm_providers.py  test_models.py  test_observability.py  test_repositories.py  test_scraper.py  test_timestamp_parsing.py
